--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,8 @@ dev = [
     # Security
     "bandit[toml]>=1.8.0",
     "pip-audit>=2.8.0",
+    # HTTP recording for deterministic integration tests
+    "vcrpy>=6.0.0",
 ]
 
 native = [
@@ -279,6 +281,7 @@ omit = [
     "*/test_*.py",
     "*/__pycache__/*",
     "*/.venv/*",
+    "src/research/*",
 ]
 
 [tool.coverage.report]
