--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: trading_pass_change_in_production
       POSTGRES_DB: trading_db
     volumes:
-      - ./data/timescaledb:/var/lib/postgresql/data
+      - timescaledb_data:/var/lib/postgresql/data
       - ./scripts/init_oanda_schema.sql:/docker-entrypoint-initdb.d/01_init_oanda_schema.sql
     command:
       - "postgres"
@@ -34,7 +34,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - ./data/redis:/data
+      - redis_data:/data
     command: redis-server --appendonly yes --maxmemory 512mb --maxmemory-policy allkeys-lru
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
@@ -53,7 +53,7 @@ services:
       GF_SECURITY_ADMIN_PASSWORD: admin
       GF_INSTALL_PLUGINS: grafana-clock-panel,grafana-simple-json-datasource
     volumes:
-      - ./data/grafana:/var/lib/grafana
+      - grafana_data:/var/lib/grafana
     depends_on:
       - timescaledb
     restart: unless-stopped
